--- a/Верстка/Homepage.html
+++ b/Верстка/Homepage.html
@@ -9,6 +9,13 @@
 <body>
     <!-- Шапка сайта -->
     <header class="header">
+        <img class="header__img__1" src="./assets/img/Homepage/lines_(1).png" alt="Lines">
+        <img class="header__img__2" src="./assets/img/Homepage/lines_(2).png" alt="Lines">
+        <img class="header__img__3" src="./assets/img/lines.png" alt="Lines">
+        <img class="header__img__4" src="./assets/img/shape.png" alt="Lines">
+        <img class="header__img__5" src="./assets/img/Homepage/illustration.png" alt="Lines">
+        <img class="header__img__6" src="./assets/img/Homepage/shapes.png" alt="Shapes">
+
         <div class="header__content">
             <img src="./assets/img/Homepage/Navbar/logo.png" alt="Logo">
             <!-- Навигация -->
@@ -37,8 +44,9 @@
                     </div>
                 </div>
             </div>
+            
         </div>
-        <img src="./assets/img/Homepage/lines_(1).png" alt="Lines">
+        
     </header>
 
     <main>
