--- a/Верстка/Homepage.html
+++ b/Верстка/Homepage.html
@@ -226,7 +226,45 @@
                     </div>
                 </div>
             </div>
-            
+        </section>
+
+        <section class="questions">
+            <div class="questions__background">
+                <img src="./assets/img/Homepage/lines_(5).png" alt="Lines">
+            </div>
+            <div class="questions__content">
+                <div class="questions__content__text">
+                    <div class="questions__content__text__title">
+                        <p>Freequently Ask Questions</p>
+                    </div>
+                    <div class="questions__content__text__plusesAndMinuses">
+                        <div class="questions__content__text__plusesAndMinuses__item">
+                            <img src="./assets/img/Minus.png" alt="Minus">
+                            <p>Aliquet lectus urna viverra in odio?</p>
+                        </div>
+                        <p class="questions__content__text__plusesAndMinuses__item__description">Adipiscing nunc arcu enim elit mattis eu placerat proin. Imperdiet elementum faucibus dignissim purus. Fusce parturient diam magna ullamcorper morbi semper massa ac facilisis.</p>
+                        <div class="questions__content__text__plusesAndMinuses__item">
+                            <img src="./assets/img/Plus.png" alt="Plus">
+                            <p>Orci commodo, viverra orci mollis ut euismod?</p>
+                        </div>
+                        <div class="questions__content__text__plusesAndMinuses__item">
+                            <img src="./assets/img/Plus.png" alt="Plus">
+                            <p>Sagittis vitae facilisi rutrum amet mauris quisque vel convallis?</p>
+                        </div>
+                        <div class="questions__content__text__plusesAndMinuses__item">
+                            <img src="./assets/img/Plus.png" alt="Plus">
+                            <p>In id dolor quis nunc, urna hendrerit pharetra?</p>
+                        </div>
+                    </div>
+                    <button class="questions__content__text__btn">
+                        Discover more
+                        <img class="questions__content__text__btn__img" src="./assets/img/Right.png" alt="arrow">
+                    </button>
+                </div>
+                <div class="questions__content__img">
+                    <img src="./assets/img/Homepage/illustration_(2).png" alt="illustration">
+                </div>
+            </div>
         </section>
     </main>
     
