--- a/Верстка/Homepage.html
+++ b/Верстка/Homepage.html
@@ -419,7 +419,7 @@
                                 <p>Social Media Marketing</p>
                             </div>
                             <div class="plans__cards__card__items__item__plus2">
-                                <img src="./assets/img/Homepage/Cross.png" alt="Cross">
+                                <img src="./assets/img/Homepage/Mark_(1).png" alt="Mark">
                                 <p>Strategy & Marketing</p>
                             </div>
                             <div class="plans__cards__card__items__item__minus">
@@ -460,12 +460,12 @@
                                 <img src="./assets/img/Homepage/Mark.png" alt="Mark">
                                 <p>Social Media Marketing</p>
                             </div>
-                            <div class="plans__cards__card__items__item__minus">
-                                <img src="./assets/img/Homepage/Cross.png" alt="Cross">
+                            <div class="plans__cards__card__items__item__plus">
+                                <img src="./assets/img/Homepage/Mark.png" alt="Mark">
                                 <p>Strategy & Marketing</p>
                             </div>
-                            <div class="plans__cards__card__items__item__minus">
-                                <img src="./assets/img/Homepage/Cross.png" alt="Cross">
+                            <div class="plans__cards__card__items__item__plus">
+                                <img src="./assets/img/Homepage/Mark.png" alt="Mark">
                                 <p>Information Technology</p>
                             </div>
                         </div>
